# qt

QVariant/: CMakeLists.txt  main.cpp
TextFinder/: CMakeLists.txt  input.txt  textfinder.cpp  textfinder.h  textfinder.ui
container/: CMakeLists.txt  main.cpp
first/: CMakeLists.txt  Main.qml  main.cpp
